--- a/src/components/cart-dropdown/cart-dropdown.scss
+++ b/src/components/cart-dropdown/cart-dropdown.scss
@@ -14,11 +14,16 @@
     .cart-items {
         height: 240px;
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         overflow: scroll;
     }
 
     button {
         margin-top: auto;
+    }
+
+    .empty-message {
+        font-size: 18px;
+        margin: 50px auto;
     }
 }
