added addItem and removeItem functionality to checkout component

--- a/src/components/checkout-item/checkout-item.scss
+++ b/src/components/checkout-item/checkout-item.scss
@@ -24,11 +24,23 @@
     }
 
     .quantity {
+        display: flex;
+
+        .arrow {
+            cursor: pointer;
+        }
+
+        .value {
+            margin: 0 10px;
+        }
+    }
+
+    .quantity {
         padding-left: 20px;
     }
 
     .remove-button {
-    padding-left: 12px;
-    cursor: pointer;
-}
+        padding-left: 12px;
+        cursor: pointer;
+    }
 }
