--- a/client/src/components/menu-item/menu-item.scss
+++ b/client/src/components/menu-item/menu-item.scss
@@ -19,7 +19,7 @@
       opacity: 0.9;
     }
   }
-  &.large {
+  & large {
     height: 380px;
   }
   &:first-child {
@@ -59,5 +59,8 @@
       font-weight: lighter;
       font-size: 16px;
     }
+  }
+  @media screen and (max-width: 800px) {
+    height: 200px;
   }
 }
